--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
 body {
-  margin: 0
+  margin: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: #8a1234;
+}
+
+h1 {
+  text-align: center;
+  font-size: 54px;
+}
+
+#camera {
+  width: 50vw;
+  border-radius: 10px;
+}
+
+.section-1 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.info {
+  height: 50vh;
+  width: 20vw;
+  border: solid 1px #fff;
+  font-size: 36px;
+  text-align: center;
+}
+
+.trash-icon {
+  height: 100%;
+  width: 100%;
+  background-image: url("../img/recycle-bin.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
