--- a/python-samples/keras/API/static/css/camera.css
+++ b/python-samples/keras/API/static/css/camera.css
@@ -12,7 +12,6 @@ body {
   margin: 0;
   min-height: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 0, 0.5);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
@@ -24,14 +23,74 @@ body {
   height: 100%;
 }
 
-#divOverlay {
+#item-type {
+  width: 100%;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#divOverlay{
+  height:calc(100% + 38px);
+}
+
+.red {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  box-sizing: border-box;
+  border-style: solid;
+  border-color: rgba(255, 0, 0, 0.5);
+  border-width: 20vh 30vw;
+}
+
+.blue {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* height: 100%; */
+  box-sizing: border-box;
+  border-style: solid;
+  border-color: rgba(0, 0, 255, 0.5);
+  border-width: 20vh 30vw;
+}
+
+.green {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* height: 100%; */
+  box-sizing: border-box;
+  border-style: solid;
+  border-color: rgba( 0, 255, 0, 0.5);
+  border-width: 20vh 30vw;
+}
+
+.yellow {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* height: 100%; */
   box-sizing: border-box;
   border-style: solid;
   border-color: rgba(255, 255, 0, 0.5);
+  border-width: 20vh 30vw;
+}
+
+.black {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* height: 100%; */
+  box-sizing: border-box;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.5);
   border-width: 20vh 30vw;
 }
