--- a/python-samples/keras/API/static/css/camera.css
+++ b/python-samples/keras/API/static/css/camera.css
@@ -36,6 +36,17 @@ body {
   height:100%;
 }
 
+#soul-logo {
+  width: 90px;
+  margin: 73vh 60vw;
+}
+
+.soul-logo-wrapper {
+  width: 100vw;
+  height: 100vh;
+  margin: -14vh -30vw;
+}
+
 .red {
   position: absolute;
   left: 0;
