--- a/python-samples/keras/API/static/css/camera.css
+++ b/python-samples/keras/API/static/css/camera.css
@@ -16,6 +16,7 @@ body {
   background-size: cover;
   background-position: bottom;
   font-family: 'Varela Round', sans-serif;
+  overflow: hidden;
 }
 
 #preview {
